--- a/assets/templates/z-posts.html
+++ b/assets/templates/z-posts.html
@@ -4,7 +4,7 @@
             <div>
                 <a class="flex flex-col space-y-2.5" href="{{.Route}}">
                     <img class="rounded drop-shadow" width="{{.Image.Width}}" height="{{.Image.Height}}" src="{{.Image.Url}}" alt="{{.Image.Alt}}">
-                    <p class="text-lg leading-snug text-black font-semibold pt-2">{{.Heading}}</p>
+                    <p class="text-lg leading-snug text-slate-900 font-semibold pt-2">{{.Heading}}</p>
                 </a>
                 <p style="font-size: 0.9375rem;" class="leading-relaxed text-slate-700 mt-2">{{.Description}}</p>
             </div>
