--- a/assets/templates/sitemap.html
+++ b/assets/templates/sitemap.html
@@ -4,7 +4,7 @@
 
     <div class="main-section mx-auto flex-col space-y-7">
 
-        <h1 class="font-bold text-3xl text-black mb-3">{{.Heading}}</h1>
+        <h1 class="font-bold text-3xl text-slate-900 mb-3">{{.Heading}}</h1>
 
         {{range .Posts}}
             <div class="w-full flex items-center justify-between">
