--- a/assets/templates/z-head.html
+++ b/assets/templates/z-head.html
@@ -54,7 +54,7 @@
         --nc-font-sans: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
         --nc-font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 
-        --nc-tx-1:#000000; /* black */
+        --nc-tx-1:#0f172a; /* slate-900 */
         --nc-tx-3:#1e293b; /* slate-800 */
         --nc-bg-2:#f8fafc; /* slate-50 */
         --nc-bg-3:#e2e8f0; /* slate-200 */
@@ -101,7 +101,7 @@
     .a26 fieldset{margin-top:1rem;padding:2rem;border:1px solid var(--nc-bg-3);border-radius:4px}
     .a26 legend{padding:auto .5rem}
     .a26 table{border-collapse:collapse;width:100%}
-    .a26 td, .a26 th{border:1px solid var(--nc-bg-3);text-align:left;padding:.5rem}
+    .a26 td, .a26 th{border:1px solid var(--nc-bg-3);text-align:left;padding:0.375rem 0.5rem}
     .a26 th{background:var(--nc-bg-2)}
     .a26 tr:nth-child(even){background:var(--nc-bg-2)}
     .a26 table caption{font-weight:700;margin-bottom:.5rem}
@@ -112,10 +112,10 @@
     .a26 ul {list-style-type:square}
     .a26 ul > li > ul {list-style-type:circle}
     .a26 ul > li > ul > li > ul {list-style-type:square}
-    .a26 mark{padding:3px 6px;background:var(--nc-ac-2);color:var(--nc-tx-1)}
+    .a26 mark{padding:2px 3px;background:var(--nc-ac-2);color:var(--nc-tx-3)}
     .a26 input, .a26 select, .a26 textarea{padding:9px 12px;margin-bottom:.5rem;background:var(--nc-bg-2);color:var(--nc-tx-3);border:1px solid var(--nc-bg-3);border-radius:4px;box-shadow:none;box-sizing:border-box;font-size:1.125rem}
     .a26 img{max-width:100%;height:auto;width:auto;border-radius:4px}
-    .a26 h1{line-height:1;color:var(--nc-tx-1);margin-bottom:var(--margin-size);font-weight:700;letter-spacing:0.2px;font-size:2rem}
+    .a26 h1{line-height:1;color:var(--nc-tx-3);margin-bottom:var(--margin-size);font-weight:700;letter-spacing:0.2px;font-size:2rem}
     .a26 h2{line-height:1;color:var(--secondary-color);margin-bottom:var(--margin-size);font-weight:700;letter-spacing:0.2px;padding-top:1.8rem;margin-bottom:1.4rem;font-size:1.85rem}
     .a26 h3{line-height:1;color:var(--secondary-color);margin-bottom:var(--margin-size);font-weight:700;letter-spacing:0.2px;padding-top:1.8rem;margin-bottom:1.4rem;font-size:1.55rem}
     .a26 h4{line-height:1;color:var(--secondary-color);margin-bottom:var(--margin-size);font-weight:700;letter-spacing:0.2px;padding-top:1.8rem;margin-bottom:1.4rem;font-size:1.25rem}
