--- a/assets/templates/z-head.html
+++ b/assets/templates/z-head.html
@@ -126,9 +126,15 @@
     .primary{color:var(--primary-color)}
     .secondary{color:var(--secondary-color)}
     .decorate-primary{-webkit-text-decoration-color:var(--primary-color);text-decoration-color:var(--primary-color)}
+
     a.link{color:var(--link-color)}
     a.link:hover{color:var(--link-color);text-decoration:underline}
 
+    a.link-plain{color:var(--link-color)}
+    a.link-plain:hover{color:var(--link-color)}
+
+
+    .full-section{width:100%}
 
     .main-section{width:100%;margin-left:auto;margin-right:auto}
     @media (min-width: 768px)  {.main-section {-ms-flex:0 0 96%;flex:0 0 96%;max-width:96%}}
