--- a/assets/templates/z-posts.html
+++ b/assets/templates/z-posts.html
@@ -1,3 +1,18 @@
+{{define "post-list"}}
+    <div class="grid grid-cols-1 gap-x-8 gap-y-10 mb-20">
+        {{range .}}
+            <div>
+                <p class="text-xl leading-snug font-semibold">
+                    <a class="link-plain" href="{{.Route}}">{{.Heading}}</a>
+                </p>
+                <p style="font-size: 0.9375rem;" class="leading-relaxed text-slate-700 mt-2">{{.Description}}</p>
+            </div>
+        {{end}}
+    </div>
+{{end}}
+
+
+
 {{define "post-grid"}}
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-x-8 gap-y-12 mb-20">
         {{range .}}
@@ -6,6 +21,44 @@
                     <img class="rounded drop-shadow" width="{{.Image.Width}}" height="{{.Image.Height}}" src="{{.Image.Url}}" alt="{{.Image.Alt}}">
                     <p class="text-lg leading-snug text-slate-900 font-semibold pt-2">{{.Heading}}</p>
                 </a>
+                <p style="font-size: 0.9375rem;" class="leading-relaxed text-slate-700 mt-2">{{.Description}}</p>
+            </div>
+        {{end}}
+    </div>
+{{end}}
+
+
+
+{{define "post-related-grid"}}
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 lg:gap-5">
+        {{range .}}
+            <div class="space-y-1 sm:space-y-1.5">
+                <a href="{{.Route}}">
+                    <img class="rounded" width="{{.Image.Width}}" height="{{.Image.Height}}" src="{{.Image.Url}}" alt="{{.Image.Alt}}">
+                </a>
+
+                <p class="primary font-medium text-base sm:text-sm underline pt-1">
+                    <a href="{{.Category.Route}}">{{.Category.Title}}</a>
+                </p>
+
+                <p class="text-slate-900 font-semibold text-lg sm:text-base lg:font-medium">
+                    <a href="{{.Route}}">{{.Heading}}</a>
+                </p>
+            </div>
+        {{end}}
+    </div>
+{{end}}
+
+
+
+{{define "post-related-list"}}
+    <div class="grid grid-cols-1 gap-y-10">
+        {{range .}}
+            <div class="space-y-1 sm:space-y-1.5">
+                <p class="text-lg font-medium">
+                    <a class="link-plain" href="{{.Route}}">{{.Heading}}</a>
+                </p>
+
                 <p style="font-size: 0.9375rem;" class="leading-relaxed text-slate-700 mt-2">{{.Description}}</p>
             </div>
         {{end}}
