--- a/assets/templates/category.html
+++ b/assets/templates/category.html
@@ -2,10 +2,17 @@
 {{template "page" .}}
 <div class="w-full mx-auto sm:max-w-3xl lg:max-w-5xl xl:max-w-6xl px-5">
 
-    {{if .Posts}}
+    {{$display := .Display}}
+
+    <div class="{{if $display.Grid}}full-section{{else}}main-section{{end}}">
         <h1 class="decorate-primary underline font-bold text-3xl text-slate-800 leading-relaxed mb-7">{{.Heading}}</h1>
-        {{template "post-grid" .Posts}}
-    {{end}}
+
+        {{if $display.Grid}}
+            {{template "post-grid" .Posts}}
+        {{else}}
+            {{template "post-list" .Posts}}
+        {{end}}
+    </div>
 
 </div>
 {{template "endpage" .}}
