--- a/assets/templates/post.html
+++ b/assets/templates/post.html
@@ -51,28 +51,18 @@
                 </div>
             {{end}}
 
-
             {{if .RelatedPosts}}
+                {{$display := .Display}}
+
                 <!-- Related Articles -->
                 <hr class="my-11">
+
                 <p class="text-xl font-bold text-slate-900 mb-6">You May Also Like</p>
-                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 lg:gap-5">
-                    {{range .RelatedPosts}}
-                        <div class="space-y-1 sm:space-y-1.5">
-                            <a href="{{.Route}}">
-                                <img class="rounded" width="{{.Image.Width}}" height="{{.Image.Height}}" src="{{.Image.Url}}" alt="{{.Image.Alt}}">
-                            </a>
-
-                            <p class="primary font-medium text-base sm:text-sm underline pt-1">
-                                <a href="{{.Category.Route}}">{{.Category.Title}}</a>
-                            </p>
-
-                            <p class="text-slate-900 font-semibold text-lg sm:text-base lg:font-medium">
-                                <a href="{{.Route}}">{{.Heading}}</a>
-                            </p>
-                        </div>
-                    {{end}}
-                </div>
+                {{if $display.Grid}}
+                    {{template "post-related-grid" .RelatedPosts}}
+                {{else}}
+                    {{template "post-related-list" .RelatedPosts}}
+                {{end}}
             {{end}}
         {{end}}
     </article>
