Adjust padding with navbar and footer links.

--- a/assets/templates/z-footer.html
+++ b/assets/templates/z-footer.html
@@ -5,7 +5,7 @@
         {{if .FooterLinks}}
             <nav class="flex flex-wrap justify-center pb-1">
                 {{range .FooterLinks}}
-                    <p class="px-3.5 py-1 hover:underline"><a href="{{.Href}}">{{.Text}}</a></p>
+                    <p class="px-1.5 py-1"><a class="px-2 hover:underline" href="{{.Href}}">{{.Text}}</a></p>
                 {{end}}
             </nav>
         {{end}}
