Modify main section width and list disc types.

--- a/app/assets/templates/z-head.html
+++ b/app/assets/templates/z-head.html
@@ -106,10 +106,11 @@
     .a26 tr:nth-child(even){background:var(--nc-bg-2)}
     .a26 table caption{font-weight:700;margin-bottom:.5rem}
     .a26 textarea{max-width:100%}
-    .a26 ol, .a26 ul{padding-left:2rem}
-    .a26 li{margin-top:.4rem}
+    .a26 ol, .a26 ul{padding-left:20px}
+    .a26 li{margin-top:1.15rem}
     .a26 ol ol, .a26 ol ul, .a26 ul ol, .a26 ul ul{margin-bottom:0}
-    .a26 ul {list-style-type:square}
+    .a26 ul {list-style-type:disc}
+    .a26 ol {list-style-type:decimal}
     .a26 ul > li > ul {list-style-type:circle}
     .a26 ul > li > ul > li > ul {list-style-type:square}
     .a26 mark{padding:2px 3px;background:var(--nc-ac-2);color:var(--nc-tx-3)}
@@ -138,7 +139,7 @@
     .main-section{width:100%;margin-left:auto;margin-right:auto}
     @media (min-width: 768px)  {.main-section {-ms-flex:0 0 96%;flex:0 0 96%;max-width:96%}}
     @media (min-width: 1024px) {.main-section {-ms-flex:0 0 72%;flex:0 0 72%;max-width:72%}}
-    @media (min-width: 1280px) {.main-section {-ms-flex:0 0 65%;flex:0 0 65%;max-width:65%}}
+    @media (min-width: 1280px) {.main-section {-ms-flex:0 0 61%;flex:0 0 61%;max-width:61%}}
 
     @media (min-width: 1024px) {.a26 {font-size:var(--font-size-sm);line-height:var(--line-height)}}
 
