Increase the line height of headings within .a26

--- a/app/assets/templates/z-head.html
+++ b/app/assets/templates/z-head.html
@@ -117,12 +117,12 @@
     .a26 mark{padding:2px 3px;background:var(--nc-ac-2);color:var(--nc-tx-3)}
     .a26 input, .a26 select, .a26 textarea{padding:9px 12px;margin-bottom:.5rem;background:var(--nc-bg-2);color:var(--nc-tx-3);border:1px solid var(--nc-bg-3);border-radius:4px;box-shadow:none;box-sizing:border-box;font-size:1.125rem}
     .a26 img{max-width:100%;height:auto;width:auto;border-radius:4px}
-    .a26 h1{line-height:1;color:var(--nc-tx-3);margin-bottom:var(--margin-size);font-weight:700;letter-spacing:0.2px;font-size:2rem}
-    .a26 h2{line-height:1;color:var(--secondary-color);margin-bottom:var(--margin-size);font-weight:700;letter-spacing:0.2px;padding-top:1.8rem;margin-bottom:1.4rem;font-size:1.85rem}
-    .a26 h3{line-height:1;color:var(--secondary-color);margin-bottom:var(--margin-size);font-weight:700;letter-spacing:0.2px;padding-top:1.8rem;margin-bottom:1.4rem;font-size:1.55rem}
-    .a26 h4{line-height:1;color:var(--secondary-color);margin-bottom:var(--margin-size);font-weight:700;letter-spacing:0.2px;padding-top:1.8rem;margin-bottom:1.4rem;font-size:1.25rem}
-    .a26 h5{line-height:1;color:var(--secondary-color);margin-bottom:var(--margin-size);font-weight:700;letter-spacing:0.2px;padding-top:1.8rem;margin-bottom:1.4rem;font-size:1rem}
-    .a26 h6{line-height:1;color:var(--secondary-color);margin-bottom:var(--margin-size);font-weight:700;letter-spacing:0.2px;padding-top:1.8rem;margin-bottom:1.4rem;font-size:.875rem}
+    .a26 h1{line-height:2.2rem;color:var(--nc-tx-3);margin-bottom:var(--margin-size);font-weight:700;letter-spacing:0.2px;font-size:2rem}
+    .a26 h2{line-height:2.2rem;color:var(--secondary-color);margin-bottom:var(--margin-size);font-weight:700;letter-spacing:0.2px;padding-top:1.8rem;margin-bottom:1.4rem;font-size:1.85rem}
+    .a26 h3{line-height:2.2rem;color:var(--secondary-color);margin-bottom:var(--margin-size);font-weight:700;letter-spacing:0.2px;padding-top:1.8rem;margin-bottom:1.4rem;font-size:1.55rem}
+    .a26 h4{line-height:2.2rem;color:var(--secondary-color);margin-bottom:var(--margin-size);font-weight:700;letter-spacing:0.2px;padding-top:1.8rem;margin-bottom:1.4rem;font-size:1.25rem}
+    .a26 h5{line-height:2.2rem;color:var(--secondary-color);margin-bottom:var(--margin-size);font-weight:700;letter-spacing:0.2px;padding-top:1.8rem;margin-bottom:1.4rem;font-size:1rem}
+    .a26 h6{line-height:2.2rem;color:var(--secondary-color);margin-bottom:var(--margin-size);font-weight:700;letter-spacing:0.2px;padding-top:1.8rem;margin-bottom:1.4rem;font-size:.875rem}
 
 
     .primary{color:var(--primary-color)}
