Tweak the last-child styling for .a26

--- a/app/assets/templates/z-head.html
+++ b/app/assets/templates/z-head.html
@@ -76,7 +76,7 @@
         --margin-size: 1.8rem;
     }
     .a26 {color:var(--nc-tx-3);font-size:var(--font-size-sm);line-height:var(--line-height-sm);margin:0 auto;border-radius:6px;overflow-x:hidden;word-break:break-word;overflow-wrap:break-word}
-    .a26 > :last-child{padding-bottom:0;margin-bottom:0}
+    .a26 > :last-child{margin-bottom:0}
     .a26 address, .a26 area, .a26 article, .a26 aside, .a26 audio, .a26 blockquote, .a26 datalist, .a26 details, .a26 dl, .a26 fieldset, .a26 figure, .a26 form, .a26 iframe, .a26 img, .a26 input, .a26 meter, .a26 nav, .a26 ol, .a26 optgroup, .a26 option, .a26 output, .a26 p, .a26 pre, .a26 progress, .a26 ruby, .a26 section, .a26 table, .a26 textarea, .a26 ul, .a26 video{margin-bottom:var(--margin-size)}
     .a26 a{color:var(--link-color);text-decoration:none}
     .a26 a:hover{color:var(--link-color-hov);text-decoration:underline}
