Adjust width in breakpoint.

--- a/app/assets/templates/z-head.html
+++ b/app/assets/templates/z-head.html
@@ -82,8 +82,7 @@
     .a26 a{color:var(--link-color);text-decoration:none}
     .a26 a:hover{color:var(--link-color-hov);text-decoration:underline}
     .a26 abbr:hover{cursor:help}
-    .a26 blockquote{padding:1.5rem;font-style:italic;background:var(--nc-bg-2);border-left:5px solid var(--nc-bg-3)}
-    .a26 blockquote{background:none}
+    .a26 blockquote{padding:1.5rem;font-style:italic;background:none;border-left:5px solid var(--nc-bg-3)}
     .a26 blockquote :last-child{padding-bottom:0;margin-bottom:0}
     .a26 abbr{cursor:help}
     .a26 p > code {opacity:96%;font-size:90%;color:var(--nc-cc-2)}
@@ -149,7 +148,7 @@
 
     .main-section{width:100%;margin-left:auto;margin-right:auto}
     @media (min-width: 768px)  {.main-section {-ms-flex:0 0 96%;flex:0 0 96%;max-width:96%}}
-    @media (min-width: 1024px) {.main-section {-ms-flex:0 0 72%;flex:0 0 72%;max-width:72%}}
+    @media (min-width: 1024px) {.main-section {-ms-flex:0 0 68%;flex:0 0 68%;max-width:68%}}
     @media (min-width: 1280px) {.main-section {-ms-flex:0 0 59%;flex:0 0 59%;max-width:59%}}
 
     @media (min-width: 1024px) {.a26 {font-size:var(--font-size-sm);line-height:var(--line-height)}}
