Remove border radius

--- a/app/assets/templates/z-head.html
+++ b/app/assets/templates/z-head.html
@@ -76,7 +76,7 @@
 
         --margin-size: 1.8rem;
     }
-    .a26 {color:var(--nc-tx-3);font-size:var(--font-size-sm);line-height:var(--line-height-sm);margin:0 auto;border-radius:6px;overflow-x:hidden;word-break:break-word;overflow-wrap:break-word}
+    .a26 {color:var(--nc-tx-3);font-size:var(--font-size-sm);line-height:var(--line-height-sm);margin:0 auto;border-radius:0px;overflow-x:hidden;word-break:break-word;overflow-wrap:break-word}
     .a26 > :last-child{margin-bottom:0}
     .a26 address, .a26 area, .a26 article, .a26 aside, .a26 audio, .a26 blockquote, .a26 datalist, .a26 details, .a26 dl, .a26 fieldset, .a26 figure, .a26 form, .a26 iframe, .a26 img, .a26 input, .a26 meter, .a26 nav, .a26 ol, .a26 optgroup, .a26 option, .a26 output, .a26 p, .a26 pre, .a26 progress, .a26 ruby, .a26 section, .a26 table, .a26 textarea, .a26 ul, .a26 video{margin-bottom:var(--margin-size)}
     .a26 a{color:var(--link-color);text-decoration:none}
@@ -87,18 +87,18 @@
     .a26 abbr{cursor:help}
     .a26 p > code {opacity:96%;font-size:90%;color:var(--nc-cc-2)}
     .a26 a code{color: inherit !important;background:none;padding:0 1px}
-    .a26 code, .a26 kbd, .a26 pre, .a26 samp{font-family:var(--nc-font-mono);background:var(--nc-bg-2);color:var(--nc-cc-1);padding:3px 4px;font-size:92%;border-radius:3px}
+    .a26 code, .a26 kbd, .a26 pre, .a26 samp{font-family:var(--nc-font-mono);background:var(--nc-bg-2);color:var(--nc-cc-1);padding:3px 4px;font-size:92%}
     .a26 kbd{border-bottom:3px solid var(--nc-bg-3)}
-    .a26 pre{padding:1rem 1.4rem;max-width:100%;overflow:auto;line-height:1.7rem;border-radius:4px}
+    .a26 pre{padding:1rem 1.4rem;max-width:100%;overflow:auto;line-height:1.7rem}
     .a26 pre code{background:inherit;color:inherit;border:0;padding:0;margin:0;font-size:0.945rem;line-height:1.65rem}
     .a26 code pre{display:inline;background:inherit;font-size:inherit;color:inherit;border:0;padding:0;margin:0}
-    .a26 details{padding:1rem 1.2rem;background:var(--nc-bg-2);border:1px solid var(--nc-bg-3);border-radius:4px;font-size:1.08rem}
+    .a26 details{padding:1rem 1.2rem;background:var(--nc-bg-2);border:1px solid var(--nc-bg-3);font-size:1.08rem}
     .a26 details li{margin-top:0.8rem}
     .a26 details li::marker{color:inherit}
     .a26 details a{text-decoration:none}
     .a26 summary{cursor:pointer;font-weight:700;font-size:1.15rem}
 
-    .a26 details.toc{background:none;border-radius:0px;border:1px solid var(--nc-tx-4)}
+    .a26 details.toc{background:none;border:1px solid var(--nc-tx-4)}
     .a26 details.toc summary{color:var(--secondary-color)}
     .a26 details.toc li{margin-top:0.8rem}
     .a26 details.toc a{color:var(--nc-tx-4);text-decoration:underline}
@@ -107,7 +107,7 @@
     .a26 dt{font-weight:700}
     .a26 dd::before{content:'→ '}
     .a26 hr{border:0;border-bottom:1px solid var(--nc-bg-3);margin:1rem auto;padding-top:1.8rem}
-    .a26 fieldset{margin-top:1rem;padding:2rem;border:1px solid var(--nc-bg-3);border-radius:4px}
+    .a26 fieldset{margin-top:1rem;padding:2rem;border:1px solid var(--nc-bg-3)}
     .a26 legend{padding:auto .5rem}
     .a26 table{border-collapse:collapse;width:100%}
     .a26 td, .a26 th{border:1px solid var(--nc-bg-3);text-align:left;padding:0.375rem 0.5rem}
@@ -125,7 +125,7 @@
     .a26 ul > li > ul > li > ul {list-style-type:square}
     .a26 mark{padding:2px 3px;background:var(--nc-ac-2);color:var(--nc-tx-3)}
     .a26 input, .a26 select, .a26 textarea{padding:9px 12px;margin-bottom:.5rem;background:var(--nc-bg-2);color:var(--nc-tx-3);border:1px solid var(--nc-bg-3);border-radius:4px;box-shadow:none;box-sizing:border-box;font-size:1.125rem}
-    .a26 img{max-width:100%;height:auto;width:auto;border-radius:4px}
+    .a26 img{max-width:100%;height:auto;width:auto}
     .a26 h1{line-height:2.75rem;color:var(--nc-tx-3);margin-bottom:var(--margin-size);font-weight:700;letter-spacing:0.2px;font-size:2.2rem}
     .a26 h2{line-height:2.75rem;color:var(--secondary-color);margin-bottom:var(--margin-size);font-weight:700;letter-spacing:0.2px;padding-top:1.8rem;margin-bottom:1.4rem;font-size:1.975rem}
     .a26 h3{line-height:2.75rem;color:var(--secondary-color);margin-bottom:var(--margin-size);font-weight:700;letter-spacing:0.2px;padding-top:1.8rem;margin-bottom:1.4rem;font-size:1.85rem}
