--- a/app/assets/templates/post.html
+++ b/app/assets/templates/post.html
@@ -24,7 +24,7 @@
 
             <!-- Article Lead Image -->
             {{if .Post.ShowLead}}
-                <img class="rounded-none drop-shadow-none mb-8" width="{{.Image.Width}}" height="{{.Image.Height}}" src="{{.Image.Url}}" alt="{{.Image.Alt}}" />
+                <img class="mb-8" width="{{.Image.Width}}" height="{{.Image.Height}}" src="{{.Image.Url}}" alt="{{.Image.Alt}}" />
             {{end}}
         {{end}}
 
